// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/orderDetail/components/MobileOrdersTable click open tracking from web grap | it should be match snapshot 1`] = `
<DocumentFragment>
  <div
    class="product-grid--infinite"
  >
    <div
      class="mobile-table-row"
    >
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.number
        </span>
        <span
          class="number"
        >
          <a
            href="/th/order-detail/621636"
          >
            FC432200605044
          </a>
        </span>
      </div>
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.date
        </span>
        <span
          class="date-time"
        >
          <span
            class="date"
          >
            05/06/20
          </span>
          <span
            class="time"
          >
            10:30
          </span>
        </span>
      </div>
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.status
        </span>
        <span
          class="status คำสั่งซื้อสมบูรณ์"
        >
          คำสั่งซื้อสมบูรณ์
        </span>
      </div>
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.price
        </span>
        <span
          class="price"
        >
          1,692.00
        </span>
      </div>
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.address
        </span>
        <span
          class="address"
        >
          shipping_address.prefix_moo 1 shipping_address.prefix_soi 1 111 village_name 12 บางรัก บางรัก กรุงเทพมหานคร 10500
        </span>
      </div>
      <div
        class="MobileOrdersTable__ButtonFooterWrapper-sc-1em5rrq-0 lcLrRM"
      >
        <button
          class="TrackOrderButton__OrderTracking-sziof4-0 jpGFYg"
          color="#544943"
          data-testid="btn-viewTrackOrderButton-handleTrackClick-621636"
          radius="5"
        >
          order_history.table.track_order
        </button>
        <button
          class="ReorderButton__Reorder-sc-1een2x9-0 liOase"
          color="#544943"
          data-testid="btn-addReorder-reorder-621636"
          radius="5"
        >
          order_history.table.repeat
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`features/orderDetail/components/MobileOrdersTable hidden button tracking when track_link null | it should be match snapshot 1`] = `
<DocumentFragment>
  <div
    class="product-grid--infinite"
  >
    <div
      class="mobile-table-row"
    >
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.number
        </span>
        <span
          class="number"
        >
          <a
            href="/th/order-detail/621636"
          >
            FC432200605044
          </a>
        </span>
      </div>
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.date
        </span>
        <span
          class="date-time"
        >
          <span
            class="date"
          >
            05/06/20
          </span>
          <span
            class="time"
          >
            10:30
          </span>
        </span>
      </div>
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.status
        </span>
        <span
          class="status คำสั่งซื้อสมบูรณ์"
        >
          คำสั่งซื้อสมบูรณ์
        </span>
      </div>
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.price
        </span>
        <span
          class="price"
        >
          1,692.00
        </span>
      </div>
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.address
        </span>
        <span
          class="address"
        >
          shipping_address.prefix_moo 1 shipping_address.prefix_soi 1 111 village_name 12 บางรัก บางรัก กรุงเทพมหานคร 10500
        </span>
      </div>
      <div
        class="MobileOrdersTable__ButtonFooterWrapper-sc-1em5rrq-0 lcLrRM"
      >
        <button
          class="ReorderButton__Reorder-sc-1een2x9-0 liOase"
          color="#544943"
          data-testid="btn-addReorder-reorder-621636"
          radius="5"
        >
          order_history.table.repeat
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`features/orderDetail/components/MobileOrdersTable it should be match snapshot 1`] = `
<DocumentFragment>
  <div
    class="product-grid--infinite"
  >
    <div
      class="mobile-table-row"
    >
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.number
        </span>
        <span
          class="number"
        >
          <a
            href="/th/order-detail/621636"
          >
            FC432200605044
          </a>
        </span>
      </div>
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.date
        </span>
        <span
          class="date-time"
        >
          <span
            class="date"
          >
            05/06/20
          </span>
          <span
            class="time"
          >
            10:30
          </span>
        </span>
      </div>
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.status
        </span>
        <span
          class="status คำสั่งซื้อสมบูรณ์"
        >
          คำสั่งซื้อสมบูรณ์
        </span>
      </div>
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.price
        </span>
        <span
          class="price"
        >
          1,692.00
        </span>
      </div>
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.address
        </span>
        <span
          class="address"
        >
          shipping_address.prefix_moo 1 shipping_address.prefix_soi 1 111 village_name 12 บางรัก บางรัก กรุงเทพมหานคร 10500
        </span>
      </div>
      <div
        class="MobileOrdersTable__ButtonFooterWrapper-sc-1em5rrq-0 lcLrRM"
      >
        <button
          class="TrackOrderButton__OrderTracking-sziof4-0 jpGFYg"
          color="#544943"
          data-testid="btn-viewTrackOrderButton-handleTrackClick-621636"
          radius="5"
        >
          order_history.table.track_order
        </button>
        <button
          class="ReorderButton__Reorder-sc-1een2x9-0 liOase"
          color="#544943"
          data-testid="btn-addReorder-reorder-621636"
          radius="5"
        >
          order_history.table.repeat
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`features/orderDetail/components/MobileOrdersTable it should be match snapshot when loadMore false 1`] = `<DocumentFragment />`;

exports[`features/orderDetail/components/MobileOrdersTable it should be match snapshot when loading 1`] = `
<DocumentFragment>
  <div
    class="product-grid--infinite"
  >
    <div
      class="mobile-table-row"
    >
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.number
        </span>
        <span
          class="number"
        >
          <a
            href="/th/order-detail/621636"
          >
            FC432200605044
          </a>
        </span>
      </div>
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.date
        </span>
        <span
          class="date-time"
        >
          <span
            class="date"
          >
            05/06/20
          </span>
          <span
            class="time"
          >
            10:30
          </span>
        </span>
      </div>
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.status
        </span>
        <span
          class="status คำสั่งซื้อสมบูรณ์"
        >
          คำสั่งซื้อสมบูรณ์
        </span>
      </div>
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.price
        </span>
        <span
          class="price"
        >
          1,692.00
        </span>
      </div>
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.address
        </span>
        <span
          class="address"
        >
          shipping_address.prefix_moo 1 shipping_address.prefix_soi 1 111 village_name 12 บางรัก บางรัก กรุงเทพมหานคร 10500
        </span>
      </div>
      <div
        class="MobileOrdersTable__ButtonFooterWrapper-sc-1em5rrq-0 lcLrRM"
      >
        <button
          class="TrackOrderButton__OrderTracking-sziof4-0 jpGFYg"
          color="#544943"
          data-testid="btn-viewTrackOrderButton-handleTrackClick-621636"
          radius="5"
        >
          order_history.table.track_order
        </button>
        <button
          class="ReorderButton__Reorder-sc-1een2x9-0 liOase"
          color="#544943"
          data-testid="btn-addReorder-reorder-621636"
          radius="5"
        >
          order_history.table.repeat
        </button>
      </div>
    </div>
    <div
      class="ui active centered inline loader load-more"
    />
  </div>
</DocumentFragment>
`;

exports[`features/orderDetail/components/MobileOrdersTable it should be match snapshot when order empty 1`] = `<DocumentFragment />`;

exports[`features/orderDetail/components/MobileOrdersTable it should be match snapshot when order status null or empty 1`] = `
<DocumentFragment>
  <div
    class="product-grid--infinite"
  >
    <div
      class="mobile-table-row"
    >
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.number
        </span>
        <span
          class="number"
        >
          <a
            href="/th/order-detail/621636"
          >
            FC432200605044
          </a>
        </span>
      </div>
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.date
        </span>
        <span
          class="date-time"
        >
          <span
            class="date"
          >
            05/06/20
          </span>
          <span
            class="time"
          >
            10:30
          </span>
        </span>
      </div>
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.status
        </span>
        <span
          class="status new"
        >
          order_history.status.new
        </span>
      </div>
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.price
        </span>
        <span
          class="price"
        >
          1,692.00
        </span>
      </div>
      <div
        class="info-row"
      >
        <span
          class="title"
        >
          order_history.table.address
        </span>
        <span
          class="address"
        >
          shipping_address.prefix_moo 1 shipping_address.prefix_soi 1 111 village_name 12 บางรัก บางรัก กรุงเทพมหานคร 10500
        </span>
      </div>
      <div
        class="MobileOrdersTable__ButtonFooterWrapper-sc-1em5rrq-0 lcLrRM"
      >
        <button
          class="TrackOrderButton__OrderTracking-sziof4-0 jpGFYg"
          color="#544943"
          data-testid="btn-viewTrackOrderButton-handleTrackClick-621636"
          radius="5"
        >
          order_history.table.track_order
        </button>
        <button
          class="ReorderButton__Reorder-sc-1een2x9-0 liOase"
          color="#544943"
          data-testid="btn-addReorder-reorder-621636"
          radius="5"
        >
          order_history.table.repeat
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
